...
        }}
      >
        <Tabs.Screen
          name="calculator"
          options={{
            title: 'Calculadora',
            tabBarButtonTestID: 'tab-calculator',
            tabBarAccessibilityLabel: 'Aba Calculadora',
            tabBarIcon: ({ color, size }) => (
              <Ionicons name="calculator-outline" size={size} color={color} />
            ),
          }}
        />
...
